--- a/src/components/Hero/Hero.module.css
+++ b/src/components/Hero/Hero.module.css
@@ -7,8 +7,8 @@
   justify-content: space-between;
   margin-top: 49px;
   z-index: 1;
-  margin-left: 10%;
-  margin-right: 10%;
+  margin-left: 5%;
+  margin-right: 8%;
 }
 
 .content {
@@ -26,7 +26,7 @@
   font-family: var(--font-roboto);
   background: linear-gradient(
     90deg,
-    rgba(255, 255, 255, 1) 110%,
+    #0b2447 110%,
     rgba(255, 255, 255, 0) 120%
   );
   -webkit-text-fill-color: transparent;
