some more changes

--- a/src/components/Hero/Hero.module.css
+++ b/src/components/Hero/Hero.module.css
@@ -10,7 +10,6 @@
   margin-left: 5%;
   margin-right: 8%;
 }
-
 .content {
   display: flex;
   flex-direction: column;
@@ -68,7 +67,7 @@
   top: -128px;
   left: -10vw;
   border-radius: 764px;
-  background: rgba(25, 55, 109, 0.7);
+  /* background: rgba(25, 55, 109, 0.7); */
   filter: blur(100px);
   z-index: 0;
 }
@@ -82,7 +81,7 @@
   top: 246px;
   right: -25vw;
   border-radius: 764px;
-  background: rgba(25, 55, 109, 0.7);
+  /* background: rgba(25, 55, 109, 0.7); */
   filter: blur(100px);
   z-index: 0;
 }
@@ -91,6 +90,10 @@
   .container {
     flex-direction: column-reverse;
   }
+  
+.heroImg{
+  display: none;
+}
 
   .content {
     align-items: center;
