--- a/src/components/Carousel/Carousel.css
+++ b/src/components/Carousel/Carousel.css
@@ -1,6 +1,6 @@
 /* Carousel.css */
 .carousel-inner img {
-    object-fit: fill;
+    object-fit: contain;
 }
 .carousel-control-prev,
 .carousel-control-next{
@@ -12,11 +12,13 @@
     background-color: white;
     color: black;
     border-radius: 50%;
+    border: 1px solid rgb(133, 133, 133, 0.5)
 }
 
 .carousel {
     /* max-width: 800px; */
-    border: 2px solid #ddd;
+    /* border: 2px solid #ddd; */
+    /* aspect-ratio: 37/9; */
     border-radius: 10px;
     overflow: hidden;
 }
