--- a/src/components/Courses/Courses.css
+++ b/src/components/Courses/Courses.css
@@ -3,6 +3,8 @@
     padding: 20px;
     background-color: #f9f9f9;
     font-family: Arial, sans-serif;
+    min-height: calc(100vh - 280px);
+
 }
 
 .courses-title {
